examples/test/testpolicy6735.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6735
  namespace: namespace100
spec:
  podSelector:
    matchLabels:
      key29: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value45
      podSelector:
        matchLabels:
          key11: value32
          key7: value10
          key45: value23
